fix: align buttons

--- a/DocuManager/src/components/NewCategoryCreator/newCategoryCreator.module.css
+++ b/DocuManager/src/components/NewCategoryCreator/newCategoryCreator.module.css
@@ -33,7 +33,7 @@
   width: 100%;
 }
 .categoryCreator_button {
-  padding: 0.5rem 0.7rem;
+  padding: 0.5rem 1rem;
   font-size: 1rem;
   border-radius: 10px;
   border: none;
